<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:layout_marginTop="@dimen/activity_horizontal_margin"
    android:layout_marginBottom="@dimen/activity_horizontal_margin"
    android:layout_marginLeft="@dimen/activity_vertical_margin"
    android:layout_marginRight="@dimen/activity_vertical_margin"
    tools:context="ceg.avtechlabs.layoutexperiment.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:gravity="fill"
        android:layout_columnSpan="1"
        android:text="@string/thanks" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/temp" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:text="@string/hot"
        android:textOn="@string/hot"
        android:textOff="COLD"
        android:gravity="center"
        />

    <CheckBox
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/milk"
        android:layout_row="2"
        android:layout_column="0"
        android:gravity="center|center_horizontal"
        android:layout_columnSpan="1"
        />
    <CheckBox
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/sugar"
        android:layout_row="3"
        android:layout_column="0"
        android:gravity="center|center_horizontal"
        android:layout_gravity=""
        android:layout_columnSpan="1"
        />
    <CheckBox
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/lemon"
        android:layout_row="4"
        android:layout_column="0"
        android:gravity="center|center_horizontal"
        android:layout_columnSpan="1"
        />

</GridLayout>
